k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: default
  labels:
    app: demo-web-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: demo-web-app
